tests/beta-primapp.m31.ref
File "./beta-primapp.m31", line 5, characters 17-18: Syntax error
  Unexpected character: {
